clusters/my-cluster/infrastructure/capacitor/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwardauth-authelia
  namespace: apps-capacitor
spec:
  forwardAuth:
    address: http://authelia.apps-authelia.svc.cluster.local/api/authz/forward-auth
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: capacitor
  namespace: apps-capacitor
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`capacitor.xinfra.ru`)
      services:
        - name: capacitor
          port: 9000
      middlewares:
        - name: forwardauth-authelia
          namespace: apps-capacitor
  tls:
    secretName: wildcard-xinfra-ru-tls
